set(TARGET_NAME trainpilot-hdmi)

file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

file(GLOB_RECURSE ALGORITHM_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/algorithm/*.cpp)
file(GLOB_RECURSE ALGORITHM_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/algorithm/*.h)

file(GLOB_RECURSE PROTO_SOURCE_FILES ${PROTO_DIR}/*.cc)
file(GLOB_RECURSE PROTO_HEADER_FILES ${PROTO_DIR}/*.h)

set(RESOURCE_FILE ./qresources.qrc)

add_executable (${TARGET_NAME}
    ${SOURCE_FILES}
    ${HEADER_FILES}
    ${PROTO_SOURCE_FILES}
    ${PROTO_HEADER_FILES}
    ${ALGORITHM_SOURCE}
    ${ALGORITHM_HEADER}
    ${RESOURCE_FILE}
)

target_link_libraries (${TARGET_NAME} 
    ${UTIL_TARGET}

	${GFLAGS_LIBRARIES}
	${GLOG_LIBRARIES}    
    ${Boost_LIBRARIES}
    ${OpenCV_LIBRARIES}
    ${PROTOBUF_LIBRARIES}
    Qt5::Widgets Qt5::Gui Qt5::Core Qt5::OpenGL Qt5::Network Qt5::Concurrent  Qt5::Multimedia
    pthread
    rt
)
