set(TARGET_NAME test_perception) # update here

file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

file(GLOB_RECURSE PROTO_SOURCE_FILES ${PROTO_DIR}/*.cc)
file(GLOB_RECURSE PROTO_HEADER_FILES ${PROTO_DIR}/*.h)

add_executable (${TARGET_NAME}
	${SOURCE_FILES}
	${HEADER_FILES}
	
	${PROTO_SOURCE_FILES}
    ${PROTO_HEADER_FILES}
)


target_link_libraries(test_perception 
${NETWORK_TARGET}
${UTIL_TARGET}
${TRANSPORT_TARGET}
${ADAPTER_TARGET}
${Caffe_LIBRARIES}
${GFLAGS_LIBRARIES}
${GLOG_LIBRARIES}
${GTEST_LIBRARIES}
${Boost_LIBRARIES}
${PROTOBUF_LIBRARIES}
${OpenCV_LIBRARIES}

${CGAL_LIBRARIES}
${VTK_LIBRARIES}
${PCL_LIBRARIES}
# GPU-based
${TORCH_LIBRARIES}
${SDKLITE_LIBRARIES}
)
